--- a/k8/backend-configmap.yaml
+++ b/k8/backend-configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: backend-config
+  namespace: crypto-namespace
 data:
   DATABASE_HOST: "postgres"
   DATABASE_PORT: "5433"
