--- a/k8/backend-secrets.yaml
+++ b/k8/backend-secrets.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: backend-db-secret
+  namespace: crypto-namespace
 type: Opaque
 stringData:
   POSTGRES_USER: "crypto_user"
